another attempt at fixing whitespace on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -574,6 +574,7 @@ input[type="checkbox"]:focus-visible {
 }
 
 .bg_fade_wrapper {
+  overflow-y:none;
   width: 100%;
   height: 100%;
 	position:absolute;
